atualizando as requisições (front) e security (back)